--- a/ubold/templates/partials/left-sidebar.html
+++ b/ubold/templates/partials/left-sidebar.html
@@ -50,152 +50,138 @@
     <!--- Sidemenu -->
     <div id="sidebar-menu">
       <ul id="side-menu">
-        <li>
-          <a href="{% url 'pages:company-info' %}">
-            <i data-feather="archive"></i>
-            <span> 기업정보 </span>
-          </a>
-        </li>
 
         <li>
-          <a href="{% url 'pages:price-analysis' %}">
-            <i data-feather="trending-up"></i>
-            <span> 주가분석 </span>
-          </a>
-        </li>
-
-        <li>
-          <a href="{% url 'apps:calendar' %}">
-            <i data-feather="bar-chart-2"></i>
-            <span> 뉴스/댓글분석 </span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#sidebarMultilevel" data-bs-toggle="collapse">
+          <a href="/pages/socialanalysis?lv1=브랜드&lv2=브랜드"><!-- dlenc-brand -->
             <i data-feather="share-2"></i>
-            <span> 소셜 분석 </span>
+            <span>브랜드</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#brandImageKeyword" data-bs-toggle="collapse">
+            <i data-feather="share-2"></i>
+            <span>지향점</span>
             <span class="menu-arrow"></span>
           </a>
-          <div class="collapse" id="sidebarMultilevel">
+          <div class="collapse" id="brandImageKeyword">
             <ul class="nav-second-level">
-              <li>
-                <a href="#financial-multilevel" data-bs-toggle="collapse">
-                  금융 <span class="menu-arrow"></span>
-                </a>
-                <div class="collapse" id="financial-multilevel">
-                  <ul class="nav-second-level">
-                    <li> <a href="/pages/socialanalysis/financial/city_bank">시중 은행</a> </li>
-                    <li> <a href="/pages/socialanalysis/financial/local_bank">지방 은행</a> </li>
-                    <li> <a href="/pages/socialanalysis/financial/non_face_to_face_bank">비대면 은행</a> </li>
-                    <li> <a href="/pages/socialanalysis/financial/stock">증권</a> </li>
-                    <li> <a href="/pages/socialanalysis/financial/life_insurance">생명 보험</a></li>
-                    <li> <a href="/pages/socialanalysis/financial/fire_insurance">생명 보험</a></li>
-                    <li> <a href="/pages/socialanalysis/financial/card">카드</a></li>
-                    <li> <a href="/pages/socialanalysis/financial/capital">캐피탈</a></li>
-                  </ul>
-                </div>
-              </li>
-
-              <li>
-                <a href="#circulation-multilevel" data-bs-toggle="collapse">
-                  유통 <span class="menu-arrow"></span>
-                </a>
-                <div class="collapse" id="circulation-multilevel">
-                  <ul class="nav-second-level">
-                    <li> <a href="/pages/socialanalysis/circulation/department_store">백화점</a> </li>
-                    <li> <a href="/pages/socialanalysis/circulation/market">대형마트</a> </li>
-                    <li> <a href="/pages/socialanalysis/circulation/convenience">편의점</a> </li>
-                    <li> <a href="/pages/socialanalysis/circulation/ecommerce">e커머스</a></li>
-                    <li> <a href="/pages/socialanalysis/circulation/parcel">택배</a></li>
-                  </ul>
-                </div>
-              </li>
-
-              <li>
-                <a href="#car-multilevel" data-bs-toggle="collapse">
-                  자동차 <span class="menu-arrow"></span>
-                </a>
-                <div class="collapse" id="car-multilevel">
-                  <ul class="nav-second-level">
-                    <li> <a href="/pages/socialanalysis/car/domesticCompany">국내회사</a> </li>
-                    <li> <a href="/pages/socialanalysis/car/foreignCompany">해외회사</a> </li>
-                    <li> <a href="/pages/socialanalysis/car/car">승용차</a> </li>
-                    <li> <a href="/pages/socialanalysis/car/suv">SUV</a></li>
-                    <li> <a href="/pages/socialanalysis/car/imported">수입차</a></li>
-                    <li> <a href="/pages/socialanalysis/car/electric">전기차</a></li>
-                  </ul>
-                </div>
-              </li>
-
-              <li>
-                <a href="#food-beverage-multilevel" data-bs-toggle="collapse">
-                  식음료 <span class="menu-arrow"></span>
-                </a>
-                <div class="collapse" id="food-beverage-multilevel">
-                  <ul class="nav-second-level">
-                    <li> <a href="/pages/socialanalysis/food/company">회사명</a> </li>
-                    <li> <a href="/pages/socialanalysis/food/ramen">라면</a> </li>
-                    <li> <a href="/pages/socialanalysis/food/rice">밥</a></li>
-                    <li> <a href="/pages/socialanalysis/food/soju">주류</a></li>
-                    <li> <a href="/pages/socialanalysis/food/beer">주류</a></li>
-                    <li> <a href="/pages/socialanalysis/food/franchise">프렌차이즈</a></li>
-                  </ul>
-                </div>
-              </li>
-
-              <li>
-                <a href="#group-company-multilevel" data-bs-toggle="collapse">
-                  그룹사 <span class="menu-arrow"></span>
-                </a>
-                <div class="collapse" id="group-company-multilevel">
-                  <ul class="nav-second-level">
-                    <li> <a href="/pages/socialanalysis/groupCompany/majorGroup">주요 그룹사</a> </li>
-                    <li> <a href="javascript: void(0);"></a> </li>
-                    <li> <a href="javascript: void(0);"></a></li>
-                    <li> <a href="javascript: void(0);"></a></li>
-                    <li> <a href="javascript: void(0);"></a></li>
-                  </ul>
-                </div>
-              </li>
-
-              {% comment %}<li>
-                <a href="#sidebarMultilevel3" data-bs-toggle="collapse">
-                  유통 <span class="menu-arrow"></span>
-                </a>
-                <div class="collapse" id="sidebarMultilevel3">
-                  <ul class="nav-second-level">
-                    <li>
-                      <a href="javascript: void(0);">백화점/마트</a>
-                    </li>
-                    <li>
-                      <a href="#sidebarMultilevel4" data-bs-toggle="collapse">
-                        편의점 <span class="menu-arrow"></span>
-                      </a>
-                      <div class="collapse" id="sidebarMultilevel4">
-                        <ul class="nav-second-level">
-                          <li>
-                            <a href="javascript: void(0);">Item 1</a>
-                          </li>
-                          <li>
-                            <a href="javascript: void(0);">Item 2</a>
-                          </li>
-                        </ul>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </li>{% endcomment %}
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=기술력">기술력</a></li><!-- dlenc-technical -->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=디자인">디자인</a></li><!-- dlenc-design-->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=살기좋은">살기좋은</a></li><!-- dlenc-livingGood-->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=선호하는">선호하는</a></li><!-- dlenc-prefered-->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=스마트">스마트</a></li><!-- dlenc-smart-->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=신뢰">신뢰</a></li><!-- dlenc-trust-->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=입지좋은">입지좋은</a></li><!-- dlenc-position-->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=추천하는">추천하는</a></li><!-- dlenc-recommend-->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=친환경">친환경</a></li><!-- dlenc-eco-->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=투자가치">투자가치</a></li><!-- dlenc-investment-->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=품질좋은">품질좋은</a></li><!-- dlenc-goodQuality-->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=라이프스타일">라이프스타일</a></li><!-- dlenc-lifestyle-->
+                <li><a href="/pages/socialanalysis?lv1=지향점&lv2=프리미엄">프리미엄</a></li><!-- dlenc-premium-->
             </ul>
           </div>
         </li>
 
         <li>
-          <a href="http://bigbuzz.bigtanews.co.kr:24580/artlist.php" target="_blank">
-            <i data-feather="link"></i>
-            <span> 채시보 </span>
+          <a href="#economicCharacter" data-bs-toggle="collapse">
+            <i data-feather="share-2"></i>
+            <span>2021 주요 트렌드</span>
+            <span class="menu-arrow"></span>
           </a>
+          <div class="collapse" id="economicCharacter">
+            <ul class="nav-second-level">
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=친환경">친환경</a></li><!-- dlenc-eco-->
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=라이프스타일">라이프스타일</a></li><!--dlenc-lifestyle -->
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=설계">설계</a></li><!-- dlenc-plan-->
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=디자인">디자인</a></li><!-- dlenc-design-->
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=커뮤니티(컨시어지)">커뮤니티(컨시어지)</a></li><!-- dlenc-community-->
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=문화">문화</a></li><!-- dlenc-culture-->
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=코로나">코로나</a></li><!-- dlenc-corona-->
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=경험">경험</a></li><!-- dlenc-experience-->
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=수요">수요</a></li><!-- dlenc-demand-->
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=가치">가치</a></li><!-- dlenc-value-->
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=인테리어">인테리어</a></li><!-- dlenc-interior-->
+                <li><a href="/pages/socialanalysis?lv1=2021주요트렌드&lv2=공간">공간</a></li><!--dlenc-space -->
+
+            </ul>
+          </div>
         </li>
+
+        <li>
+          <a href="#structureCharacter" data-bs-toggle="collapse">
+            <i data-feather="share-2"></i>
+            <span>2022 예상 트렌드</span>
+            <span class="menu-arrow"></span>
+          </a>
+          <div class="collapse" id="structureCharacter">
+            <ul class="nav-second-level">
+                <li><a href="/pages/socialanalysis?lv1=2022예상트렌드&lv2=인공지능">인공지능</a></li><!-- dlenc-ai-->
+                <li><a href="/pages/socialanalysis?lv1=2022예상트렌드&lv2=지능화">지능화</a></li><!-- dlenc-intellectualization-->
+                <li><a href="/pages/socialanalysis?lv1=2022예상트렌드&lv2=메타버스">메타버스</a></li><!-- -->
+                <li><a href="/pages/socialanalysis?lv1=2022예상트렌드&lv2=안전">안전</a></li><!-- -->
+                <li><a href="/pages/socialanalysis?lv1=2022예상트렌드&lv2=커뮤니티(컨시어지)">커뮤니티(컨시어지)</a></li><!-- -->
+                <li><a href="/pages/socialanalysis?lv1=2022예상트렌드&lv2=스몰">스몰</a></li><!-- -->
+                <li><a href="/pages/socialanalysis?lv1=2022예상트렌드&lv2=재생">재생</a></li><!-- -->
+                <li><a href="/pages/socialanalysis?lv1=2022예상트렌드&lv2=자연">자연</a></li><!-- -->
+                <li><a href="/pages/socialanalysis?lv1=2022예상트렌드&lv2=럭셔리">럭셔리</a></li><!-- -->
+                <li><a href="/pages/socialanalysis?lv1=2022예상트렌드&lv2=개인화">개인화</a></li><!-- -->
+            </ul>
+          </div>
+        </li>
+
+        <li>
+          <a href="#environmentCharacter" data-bs-toggle="collapse">
+            <i data-feather="share-2"></i>
+            <span>경제 특성</span>
+            <span class="menu-arrow"></span>
+          </a>
+          <div class="collapse" id="environmentCharacter">
+            <ul class="nav-second-level">
+                <li><a href="/pages/socialanalysis?lv1=경제특성&lv2=가격상승">가격상승</a></li>
+                <li><a href="/pages/socialanalysis?lv1=경제특성&lv2=개발계획">개발계획</a></li>
+                <li><a href="/pages/socialanalysis?lv1=경제특성&lv2=미래가치">미래가치</a></li>
+                <li><a href="/pages/socialanalysis?lv1=경제특성&lv2=투자가치">투자가치</a></li>
+                <li><a href="/pages/socialanalysis?lv1=경제특성&lv2=주거비용">주거비용</a></li>
+            </ul>
+          </div>
+        </li>
+
+        <li>
+          <a href="#mainTrend2021" data-bs-toggle="collapse">
+            <i data-feather="share-2"></i>
+            <span>구조 특성</span>
+            <span class="menu-arrow"></span>
+          </a>
+          <div class="collapse" id="mainTrend2021">
+            <ul class="nav-second-level">
+                <li><a href="/pages/socialanalysis?lv1=구조특성&lv2=인테리어">인테리어</a></li>
+                <li><a href="/pages/socialanalysis?lv1=구조특성&lv2=소음">소음</a></li>
+                <li><a href="/pages/socialanalysis?lv1=구조특성&lv2=채광">채광</a></li>
+                <li><a href="/pages/socialanalysis?lv1=구조특성&lv2=환기">환기</a></li>
+                <li><a href="/pages/socialanalysis?lv1=구조특성&lv2=평면">평면</a></li>
+            </ul>
+          </div>
+        </li>
+
+        <li>
+          <a href="#expectedTrend2022" data-bs-toggle="collapse">
+            <i data-feather="share-2"></i>
+            <span>환경 특성</span>
+            <span class="menu-arrow"></span>
+          </a>
+          <div class="collapse" id="expectedTrend2022">
+            <ul class="nav-second-level">
+                <li><a href="/pages/socialanalysis?lv1=환경특성&lv2=개발">개발</a></li>
+                <li><a href="/pages/socialanalysis?lv1=환경특성&lv2=주변">주변</a></li>
+                <li><a href="/pages/socialanalysis?lv1=환경특성&lv2=커뮤니티(컨시어지)">커뮤니티(컨시어지)</a></li>
+                <li><a href="/pages/socialanalysis?lv1=환경특성&lv2=교통">교통</a></li>
+                <li><a href="/pages/socialanalysis?lv1=환경특성&lv2=교육">교육</a></li>
+            </ul>
+          </div>
+        </li>
+
+
 
         <hr/>
 
