--- a/ubold/templates/dashboard/index.html
+++ b/ubold/templates/dashboard/index.html
@@ -21,6 +21,10 @@
 {% endblock %}
  {% block content %}
 
+<script>
+    window.location.href = "/pages/socialanalysis?lv1=브랜드&lv2=브랜드"
+</script>
+
 <!-- Start Content-->
 <div class="container-fluid">
   <!-- start page title -->
