--- a/ubold/templates/partials/left-sidebar.html
+++ b/ubold/templates/partials/left-sidebar.html
@@ -185,7 +185,7 @@
 
         <hr/>
 
-        <li class="menu-title">Navigation</li>
+        {% comment %}<li class="menu-title">Navigation</li>
 
         <li>
           <a href="#sidebarDashboards" data-bs-toggle="collapse">
@@ -872,7 +872,7 @@
               </li>
             </ul>
           </div>
-        </li>
+        </li>{% endcomment %}
 
 {#        <li>#}
 {#          <a href="#sidebarMultilevel" data-bs-toggle="collapse">#}
