--- a/ubold/templates/account/login.html
+++ b/ubold/templates/account/login.html
@@ -23,7 +23,7 @@ class="loading authentication-bg authentication-bg-pattern"
                             <div class="auth-logo">
                                 <a href="{% url 'landing' %}" class="logo logo-dark text-center">
                                     <span class="logo-lg">
-                                        <img src="{% static 'images/logo-dark.png' %}" alt="" height="22">
+                                        <img src="{% static 'images/SiteLogo.png' %}" alt="" height="75">
                                     </span>
                                 </a>
 
@@ -50,7 +50,7 @@ class="loading authentication-bg authentication-bg-pattern"
 
                         </form>
 
-                        <div class="text-center">
+                        {% comment %}<div class="text-center">
                             <h5 class="mt-3 text-muted">Sign in with</h5>
                             <ul class="social-list list-inline mt-3 mb-0">
                                 <li class="list-inline-item">
@@ -72,7 +72,7 @@ class="loading authentication-bg authentication-bg-pattern"
                                             class="mdi mdi-github"></i></a>
                                 </li>
                             </ul>
-                        </div>
+                        </div>{% endcomment %}
 
                     </div> <!-- end card-body -->
                 </div>
